# AlgoCode

PerformanceZoo/: CMakeLists.txt  README.md  observations.md
PerformanceZoo/include/: zoo.hpp
PerformanceZoo/reports/20260703_065222/: alloc_zoo_stat.txt  atomic_zoo_stat.txt  branch_zoo_stat.txt  busy_zoo_stat.txt  cache_zoo_stat.txt  cpu_zoo_stat.txt  false_zoo_stat.txt  global_perf.data  global_sched.data  io_zoo_stat.txt  lock_zoo_stat.txt  memory_zoo_stat.txt  observation_dashboard.md  observation_summary.csv  observation_summary.txt  pc_zoo_stat.txt
PerformanceZoo/scripts/: observe.sh  perf_record.sh  perf_stat.sh  vtune.sh
PerformanceZoo/src/: allocation_pressure.cpp  atomic_contention.cpp  branch_prediction.cpp  busy_wait.cpp  cache_patterns.cpp  cpu_hotspot.cpp  false_sharing.cpp  io_hotspot.cpp  lock_contention.cpp  main.cpp  memory_hotspot.cpp  producer_consumer.cpp
